[gd_scene load_steps=10 format=3 uid="uid://6qul34qgl324"]

[ext_resource type="Script" uid="uid://bjac1mv0isf4j" path="res://Scripts/battle.gd" id="1_m1w6r"]
[ext_resource type="Texture2D" uid="uid://bl7u6n7mae5tu" path="res://Resources/Images/Battle Scene Images/joke background .png" id="1_tk3fk"]
[ext_resource type="Texture2D" uid="uid://d0on11jujq88f" path="res://Resources/Images/Battle Scene Images/testfella.png" id="2_m1w6r"]
[ext_resource type="Texture2D" uid="uid://wdy0vv8vyt6v" path="res://Resources/Images/Battle Scene Images/evilfella.png" id="3_0tpb6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tpb6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3d018"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk3fk"]
bg_color = Color(0.62746686, 0.02709203, 0.2299197, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1w6r"]
bg_color = Color(0.31847927, 0.70379114, 0.1653328, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eevwc"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1w6r")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.14044744, 0.14044744, 0.14044744, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tk3fk")
expand_mode = 1

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -42.0
offset_right = 118.0
grow_horizontal = 2
grow_vertical = 0

[node name="Actions" type="VBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.193
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -2.9464998
offset_right = 52.5
offset_bottom = 0.94750214
grow_horizontal = 2
grow_vertical = 2

[node name="TopActions" type="HBoxContainer" parent="ActionPanel/Actions"]
layout_mode = 2
size_flags_vertical = 2

[node name="TopLeftAction" type="Button" parent="ActionPanel/Actions/TopActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0tpb6")
text = "should not see this"

[node name="TopRightAction" type="Button" parent="ActionPanel/Actions/TopActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0tpb6")
text = "should not see this"

[node name="BottomActions" type="HBoxContainer" parent="ActionPanel/Actions"]
layout_mode = 2

[node name="BottomLeftAction" type="Button" parent="ActionPanel/Actions/BottomActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0tpb6")
text = "should not see this"

[node name="BottomMiddleAction" type="Button" parent="ActionPanel/Actions/BottomActions"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3d018")
text = "Test"

[node name="BottomRightAction" type="Button" parent="ActionPanel/Actions/BottomActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0tpb6")
text = "should not see this"

[node name="PlayerFigmentBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 79.0
offset_bottom = 29.0
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="PlayerFigmentBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tk3fk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m1w6r")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerFigmentBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Your Figment"
horizontal_alignment = 1

[node name="PlayerFigment" type="TextureRect" parent="PlayerFigmentBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_m1w6r")
stretch_mode = 4

[node name="EnemyFigmentBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -31.5
offset_bottom = 31.5
grow_horizontal = 0
grow_vertical = 2

[node name="ProgressBar2" type="ProgressBar" parent="EnemyFigmentBox"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tk3fk")
theme_override_styles/fill = SubResource("StyleBoxFlat_m1w6r")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyFigmentBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Enemy Figment"
horizontal_alignment = 1

[node name="Enemy Figment" type="TextureRect" parent="EnemyFigmentBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_0tpb6")
stretch_mode = 5

[node name="TextBox" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -53.0
offset_right = 191.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_eevwc")
text = "Should not see this"

[connection signal="pressed" from="ActionPanel/Actions/TopActions/TopLeftAction" to="." method="_on_top_left_move_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/TopActions/TopRightAction" to="." method="_on_top_right_move_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/BottomActions/BottomLeftAction" to="." method="_on_bottom_left_move_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/BottomActions/BottomMiddleAction" to="." method="_on_bottom_middle_action_pressed"]
[connection signal="pressed" from="ActionPanel/Actions/BottomActions/BottomRightAction" to="." method="_on_bottom_right_move_pressed"]
